# LangMatch

./: .gitignore  CNAME  README.md  pyproject.toml
.github/workflows/: pages.yml
data/: langmatch_smoke_manifest.json  langmatch_source_manifest_v1.json  math500_text_smoke_manifest.json  matrix_ifeval_manifest_2048.json  matrix_ifeval_manifest_v2.json  matrix_manifest_2048_v1.json  matrix_manifest_v1.json  matrix_manifest_v2.json  qwen_smoke_manifest.json
data/langmatch_v1/: langmatch_manifest.json
data/langmatch_v2/: langmatch_compact_manifest.json  langmatch_compact_smoke_manifest.json  langmatch_hidden_manifest.json  langmatch_hidden_smoke_manifest.json
docs/: langmatch_3runs_data_gaps.md  langmatch_3runs_plot_summary.json  langmatch_3runs_results_zh.md  langmatch_3runs_tok_sr_table.csv  langmatch_3runs_tok_sr_table.md  matrix_eval_results.md  matrix_eval_results_2048.md  matrix_eval_results_2048_zh.md  matrix_eval_results_zh.md  开题报告草案.md
scripts/: aggregate_langmatch_results.py  aggregate_matrix_results.py  export_langmatch_3runs.py  export_langmatch_outputs.py  export_matrix_outputs.py  generate_langmatch_3runs_plots.py  generate_matrix_plots.py  prepare_langmatch_manifests.py  run_langmatch_experiment.py  run_pilot.py
site/: 404.html  CNAME  README.md  index.html  robots.txt  site.webmanifest  sitemap.xml  styles.css  zh.html
src/wyw_pilot/: __init__.py
tests/: test_prepare_langmatch_manifests.py  test_run_langmatch_experiment.py
